--- a/BlazorComponents/Components/Pages/CyberCalculator.razor
+++ b/BlazorComponents/Components/Pages/CyberCalculator.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @using System.IO
 
-<h3>Cyber Calculator - AES Encryption and Decryption</h3>
+<h3>AES Encryption and Decryption</h3>
 
 <div class="container">
     <div class="input-group">
